[package]
name = "gitls"
version = "0.1.0"
edition = "2021"
license = "MIT" 
authors = ["Paul van der Meijs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
git2 = "0.18.0"
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
