[package]
name = "gitls"
version = "0.2.1"
edition = "2021"
description = "A language server for Git."
license = "MIT" 
authors = ["Paul van der Meijs"]
repository = "https://github.com/paulvandermeijs/gitls"
keywords = ["git", "language-server", "lsp"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
git2 = "0.19.0"
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
vfs = "0.9.0"
